# Rust-Projects

./: .gitignore  readme.md
api_calls_app/: Cargo.toml
api_calls_app/src/: main.rs
async_await_request_app/: Cargo.toml
async_await_request_app/src/: main.rs
basic_authentication_app/: Cargo.toml
basic_authentication_app/src/: main.rs
compress_app/: Cargo.toml
compress_app/src/: main.rs
decompress_app/: Cargo.toml
decompress_app/src/: main.rs
download_images_app/: Cargo.toml
download_images_app/src/: main.rs
extract_links_app/: Cargo.toml
extract_links_app/src/: main.rs
get_request_app/: Cargo.toml
get_request_app/src/: main.rs
git_automate_app/: Cargo.toml
git_automate_app/src/: main.rs
password_vault/: Cargo.toml  passwords.json
password_vault/src/: main.rs  pentry.rs
postgres_app/: Cargo.toml
postgres_app/src/: main.rs
read_csv_app/: Cargo.toml
read_csv_app/src/: main.rs
read_json/: Cargo.toml
read_json/src/: main.rs
rhai__actix_api/: Cargo.toml
rhai__actix_api/src/: main.rs  multiply.rhai
sqlite_app/: Cargo.toml  sqlite.db
sqlite_app/src/: main.rs
write_json_app/: Cargo.toml
write_json_app/src/: main.rs
