[package]
name = "download_images_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.12.3", features=["blocking","json"]}
tempfile = "3.3.0"
error-chain = "0.12.4"
tokio = { version = "1.0", features = ["full"] }